[package]
name = "todomvc-htmx"
version = "0.0.1"
edition = "2021"
license = "Apache 2.0"

[dependencies]
astra = { git = "https://github.com/dpc/astra", rev = "f135e4c8be0409d371218669bcdb13566f35f116" }
maud = { version = "0.25.0", features = [ "axum" ] }
url = "2.2.2"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
headers = "0.4.0"
cookie = "0.18.0"
time = "0.3.31"
chrono = "0.4.31"
http = "1"
rand = "0.8.5"